--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ body {
 		font-weight: 400;
 }
 
+#particles-js
+{
+	height: 100%;
+	width: 100%;
+	position: absolute;
+}
 
 /*---------------------------------------
     Typorgraphy
