Added styling to sponsors to lay them out better and added personal pic

--- a/css/style.css
+++ b/css/style.css
@@ -289,6 +289,14 @@ footer {
         padding: 0;
     }
 
+		.emerson {
+			margin-right: -100px;
+		}
+
+		.bronze {
+			margin-right: -100px;
+		}
+
 }
 
 
