--- a/css/style.css
+++ b/css/style.css
@@ -65,11 +65,6 @@ a {
   margin-bottom: 32px;
 }
 
-#overview,
-#register {
-  padding-bottom: 4rem;
-}
-
 #detail, #video,
 #speakers,
 #program,
@@ -103,7 +98,7 @@ footer {
     letter-spacing: 1px;
     font-size: 12px;
     padding: 14px 42px;
-    margin: 15rem auto 0 auto;
+    margin: 3rem auto 0 auto;
 		display: block;
 		width: 230px;
     -webkit-transition: all 0.4s ease-in-out;
@@ -131,8 +126,7 @@ footer {
 }
 
 #intro .btn-default:hover {
-    background: #fed132;
-    border-color: transparent;
+    border-color: #fed132;
 }
 
 .parallax-section {
@@ -331,7 +325,7 @@ footer {
     0 0,
     100% 0,
     100% 100%,
-    0 calc(100% - 6vw)
+    0 93%
   );
 
 }
@@ -352,20 +346,21 @@ footer {
 
 .timer{
   font-weight: 100;
-  font-size: 2em;
+  font-size: 3em;
 	line-height: initial;
-	width: 350px;
-	margin: 3.5rem auto;
+	width: 395px;
+	margin: 2rem auto;
+	height: calc(94.4px + 2rem);
+	border: 2px solid white;
+	padding: 1rem;
 }
 .timer span{
   display: block;
   min-width: 80px;
   float: left;
-  margin-right: 10px;
   background: #ddd;
-  padding: 5px;
   text-align: center;
-  border-radius: 3px;
+	margin-right: calc(65px / 4);
 }
 .timer span:last-child {
 	margin-right: 0;
@@ -375,20 +370,20 @@ footer {
   font-size: .5em;
 }
 .timer .days{
-	background-color: #036084;
+	background-color: transparent;
   color: white;
 }
 .timer .hours{
 	color: white;
-  background-color: #78BE20;
+  background-color: transparent;
 }
 .timer .minutes{
-	background-color: #036084;
+	background-color: transparent;
   color: white;
 }
 .timer .seconds{
 	color: white;
-  background-color: #78BE20;
+  background-color: transparent;
 }
 
 @keyframes removeText{
@@ -408,14 +403,7 @@ footer {
 /*---------------------------------------
    Overview  section
 -----------------------------------------*/
-#overview {
-	clip-path: polygon(
-    0 0,
-    100% 0,
-    100% 100%,
-    0 calc(100% - 6vw)
-  );
-}
+
 #overview img {
   position: relative;
   padding-bottom: 32px;
@@ -448,13 +436,13 @@ footer {
 
 @media (min-width: 991px) {
 	.info h2 {
-		font-size: 2.25rem;
+		font-size: 1.3rem;
 	}
 }
 
 @media (min-width: 1200px) {
 	.info h2 {
-		font-size: 2.75rem;
+		font-size: 2rem;
 	}
 }
 
@@ -497,7 +485,7 @@ footer {
 }
 
 #speakers h3 {
-    font-size: 18px;
+    font-size: 16px;
     margin-bottom: 0px;
 		color: white;
 }
@@ -528,6 +516,13 @@ footer {
     padding-bottom: 22px;
 }
 
+@media (min-width: 992px) {
+	#speakers .offset {
+		margin-right: 11.11111111%;
+	}
+}
+
+
 /*---------------------------------------
    Faq section
 -----------------------------------------*/
@@ -537,7 +532,7 @@ footer {
   padding-bottom: 8rem;
 
 	clip-path: polygon(
-    0 3vw,
+    0 7%,
     100% 0,
     100% 100%,
     0 calc(100% - 3vw)
