--- a/css/slider.css
+++ b/css/slider.css
@@ -30,6 +30,12 @@ body, hmtl{background: #ecf0f1; font-family: 'Anton', sans-serif;}
 	}
 }
 
+@media (max-width: 768px) {
+	.slide-container {
+		margin-top: 16rem;
+	}
+}
+
 #slider-wrap ul#slider{
 	width:100%;
 	height:100%;
