--- a/css/style.css
+++ b/css/style.css
@@ -425,18 +425,26 @@ footer {
 	margin-top: 0;
 	margin-bottom: 0;
 	color: white;
-	font-size: 1.6rem;
+	font-size: 1.3rem;
 }
 
 @media (min-width: 768px) {
 	.info h2 {
-		font-size: 1.6rem;
+		font-size: 1.75rem;
+	}
+
+	.info-offset {
+		margin-left: calc(100% - 75% - (6 * 15px));
 	}
 }
 
 @media (min-width: 991px) {
 	.info h2 {
-		font-size: 1.3rem;
+		font-size: 1.6rem;
+	}
+
+	.info-offset {
+		margin-left: 25%;
 	}
 }
 
