--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,12 @@ a {
 /*---------------------------------------
     General
 -----------------------------------------*/
+@media (max-width: 800px) {
+	.cd-nav-trigger {
+		display: none !important;
+	}
+}
+
 #mlh-trust-badge {
 	display:block;
 	max-width:100px;
@@ -70,10 +76,6 @@ a {
 	top:0;
 	width:10%;
 	z-index:10000;
-}
-
-.section-title {
-  margin-bottom: 32px;
 }
 
 #detail, #video,
@@ -765,6 +767,7 @@ footer {
 -----------------------------------------*/
 #sponsors h3 {
 	text-transform: uppercase;
+	font-weight: bold;
 }
 
 #sponsors .container {
@@ -817,6 +820,16 @@ footer {
 	height: inherit;
 	margin-top: -1.25rem;
 	text-align: center;
+}
+
+#sponsors .partners .image-container {
+	width: 17%;
+	display: inline-block;
+	margin-right: 8%;
+}
+
+#sponsors .partners .image-container:last-child {
+	margin-right: 0;
 }
 
 @media (min-width: 768px) {
