Header logo only appears when scrolling down

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ a {
 /*---------------------------------------
     General
 -----------------------------------------*/
+.shown {
+	display: none !important;
+}
+
 .section-title {
 	margin-bottom: 2.5rem;
 }
