Dot navigation added back

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ a {
 /*---------------------------------------
     General
 -----------------------------------------*/
+section {
+	height: 100%;
+}
+
 .shown {
 	display: none !important;
 }
