--- a/css/style.css
+++ b/css/style.css
@@ -85,10 +85,15 @@ section {
 	max-width:100px;
 	min-width:60px;
 	position:fixed;
-	right:50px;
+	right:10px;
 	top:0;
 	width:10%;
 	z-index:10000;
+}
+@media (min-width: 768px) {
+	#mlh-trust-badge {
+		right: 50px;
+	}
 }
 
 #detail, #video,
