--- a/css/style.css
+++ b/css/style.css
@@ -318,9 +318,10 @@ footer {
 -----------------------------------------*/
 #intro {
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../images/intro-bg.jpg') 50% 0 repeat-y fixed;
-    -webkit-background-size: auto 100vh;
-    background-size: auto 100vh;
+    -webkit-background-size: cover;
+    background-size: cover;
     background-position: center center;
+		background-attachment: scroll;
 		background-color: #222;
     color: #ffffff;
     display:table-cell;
